gcc-14.2.0/gcc/testsuite/gdc.test/compilable/test23978.d
version https://git-lfs.github.com/spec/v1
oid sha256:edf1b045966974b96d8c7261421eb27cf759805be81fdde895d820fc402b3360
size 749
